Fixed issue with header spacing in the homepage.

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,5 +1,5 @@
 .image-container {
-    position: relative;
+    /* position: relative; */
     width: 100%;
     height: 50vh;
 }
@@ -10,6 +10,7 @@
     object-fit: cover;
     object-position: center;
     border: none;
+    margin-top: -3.2rem;
 }
 
 .park-search {
